# clamavui

./: CMakeLists.txt  README.md  clamavui.actions  clamavui.pro  org.tuchavshortah.clamavui.antivirus.actions
forms/: analysis.ui  clamui.ui  history.ui  network.ui  quarantine.ui  scan.ui  scandirectory.ui  schedule.ui  settings.ui  update.ui  updateassistant.ui  whitelist.ui
include/: analysis.h  antivirus.h  clamsettings.h  clamui.h  history.h  init.h  network.h  quarantine.h  scan.h  scandirectory.h  schedule.h  settings.h  setup.h  update.h  updateassistant.h  whitelist.h  worker.h
src/: analysis.cpp  antivirus.cpp  clamsettings.cpp  clamui.cpp  history.cpp  init.cpp  main.cpp  network.cpp  quarantine.cpp  scan.cpp  scandirectory.cpp  schedule.cpp  settings.cpp  setup.cpp  update.cpp  updateassistant.cpp  whitelist.cpp
